# Research-Thinking-Agent

./: .gitignore  README.md  pyproject.toml
src/: test_pipeline.py
src/rta/: __init__.py  agent_reply.py  cli.py  config.py  interactive.py  logger.py  pipeline.py  run_manager.py  schemas.py  shell.py
src/rta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rta/llm/: gemini_client.py
src/rta/outputs/: 1_plan.json  2_retrieval.json  3_structuring.json  4_reasoning.json  final_report.md  plan.json  retrieval.json
src/rta/prompts/: reasoning_system.txt  reasoning_user.txt
src/rta/schemas/: __init__.py  core.py  final_output.py  input_payload.py  query_plan.py  reasoning.py  retrieval.py  run_status.py  topic_structuring.py
src/rta/stages/: query_plan_gemini.py  query_plan_mock.py  reasoning_agent.py  reasoning_engine.py  retrieval_live.py  retrieval_mock.py  topic_miner.py  topic_structuring_mock.py
src/rta/tools/: list_models.py
src/rta/utils/: json_extract.py  llm_client.py  ui.py  visualization.py
src/rta/validators/: reasoning_validator.py
